# prog

./: .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
prog/: MyRule.py  config.py  main.py
prog/database/: group.py  models.py  routes.py  rules.py  user.py  users.py
prog/message/: __init__.py  admin.py  group.py  private.py
prog/migration/: 001.up.sql  001_initial_schema.up.sql
